<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/ru_menu_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_download_mess"
                android:icon="@drawable/ic_unknown"
                android:title="@string/ru_menu_item_download"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/ru_menu_item_send"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/app_bar_switch"
            android:icon="@drawable/ic_history"
            android:title="@string/ru_menu_s_history" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_files"
            android:title="@string/ru_menu_item_file"/>
        <item
            android:id="@+id/nav_del_files"
            android:icon="@drawable/ic_files_delite"
            android:title="@string/ru_menu_item_del"/>
        <item
            android:id="@+id/nav_mail_setting_list"
            android:icon="@drawable/ic_setting"
            android:title="@string/ru_menu_item_setting"/>

        <!--            app:actionLayout="@layout/switch_item" -->

    </group>
</menu>