<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_theme_blue_color"
        android:textColor="@color/custom_theme_white"
        android:textSize="16sp"
        android:padding="6dp"
        android:text="@string/mail_setting_setting"/>
    <EditText
        android:id="@+id/server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_setting_server" />
    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_setting_port" />
    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_setting_account" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail_setting_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/custom_theme_light_blue_color"
        android:text="@string/mail_setting_save" />
</LinearLayout>